@@ -1,8 +1,9 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
 import re
+import datetime
 from functools import reduce
-from itertools import islice, izip
+from itertools import islice, izip, chain
 
 from sql import Table, Column, Literal, Desc, Asc, Expression, Flavor
 from sql.functions import Now, Extract
@@ -10,7 +11,7 @@ from sql.conditionals import Coalesce
 from sql.operators import Or, And, Operator
 from sql.aggregate import Count, Max
 
-from trytond.model import ModelStorage
+from trytond.model import ModelStorage, ModelView
 from trytond.model import fields
 from trytond import backend
 from trytond.tools import reduce_ids
@@ -19,6 +20,7 @@ from trytond.transaction import Transaction
 from trytond.pool import Pool
 from trytond.cache import LRUDict
 from trytond.exceptions import ConcurrencyException
+from trytond.rpc import RPC
 _RE_UNIQUE = re.compile('UNIQUE\s*\((.*)\)', re.I)
 _RE_CHECK = re.compile('CHECK\s*\((.*)\)', re.I)
 
@@ -38,6 +40,10 @@ class ModelSQL(ModelStorage):
         cls._sql_constraints = []
         cls._order = [('id', 'ASC')]
         cls._sql_error_messages = {}
+        if issubclass(cls, ModelView):
+            cls.__rpc__.update({
+                    'history_revisions': RPC(),
+                    })
 
         if not cls._table:
             cls._table = cls.__name__.replace('.', '_')
@@ -227,6 +233,40 @@ class ModelSQL(ModelStorage):
         for name, error in cls._sql_error_messages.iteritems():
             if name in exception[0]:
                 cls.raise_user_error(error)
+
+    @classmethod
+    def history_revisions(cls, ids):
+        pool = Pool()
+        ModelAccess = pool.get('ir.model.access')
+        User = pool.get('res.user')
+        cursor = Transaction().cursor
+
+        ModelAccess.check(cls.__name__, 'read')
+
+        table = cls.__table_history__()
+        user = User.__table__()
+        revisions = []
+        in_max = cursor.IN_MAX
+        for i in range(0, len(ids), in_max):
+            sub_ids = ids[i:i + in_max]
+            where = reduce_ids(table.id, sub_ids)
+            cursor.execute(*table.join(user, 'LEFT',
+                    Coalesce(table.write_uid, table.create_uid) == user.id)
+                .select(
+                    Coalesce(table.write_date, table.create_date),
+                    table.id,
+                    user.name,
+                    where=where))
+            revisions.append(cursor.fetchall())
+        revisions = list(chain(*revisions))
+        revisions.sort(reverse=True)
+        # SQLite uses char for COALESCE
+        if revisions and isinstance(revisions[0][0], basestring):
+            strptime = datetime.datetime.strptime
+            format_ = '%Y-%m-%d %H:%M:%S.%f'
+            revisions = [(strptime(timestamp, format_), id_, name)
+                for timestamp, id_, name in revisions]
+        return revisions
 
     @classmethod
     def __insert_history(cls, ids, deleted=False):
